bug fixed, visible contact popup on turned phone on wide side

--- a/css/modal.css
+++ b/css/modal.css
@@ -22,12 +22,12 @@ display: block;
     height: 10em;
     background: rgb(216, 216, 216);
     z-index: 3;
-    top: -65%;
-    left: 42%;
+    top: -55%;
+    left: -42%;
     border-radius: 15px;
 }
 
-.popcontact.show{top: 55%;}
+.popcontact.show{top: 55%; left: 42%;}
 
 .pnumber{padding-left: 0.5em;}
 
@@ -56,13 +56,13 @@ display: block;
         height: 10em;
         background: rgb(216, 216, 216);
         z-index: 3;
-        top: -60%;
-        left: 37.5%;
+        top: -50%;
+        left: -37.5%;
         border-radius: 15px;
     }
 
     .overlay.show{display: block;}
-    .popcontact.show{top: 50%;}
+    .popcontact.show{top: 50%; left: 37.5%;}
 }
 
 @media(max-width: 1200px){
@@ -81,12 +81,12 @@ display: block;
         background: rgb(216, 216, 216);
         z-index: 3;
         top: -50%;
-        left: 36%;
+        left: -50%;
         border-radius: 15px;
     }
 
     .overlay.show{display: block;}
-    .popcontact.show{top: 40%;}
+    .popcontact.show{top: 50%; left: 36%;}
 }
 
 @media(max-width: 1100px){
@@ -106,11 +106,11 @@ display: block;
         background: rgb(216, 216, 216);
         z-index: 3;
         top: -50%;
-        left: 34%;
+        left: -340%;
         border-radius: 15px;
     }
     .overlay.show{display: block;}
-    .popcontact.show{top: 40%;}
+    .popcontact.show{top: 50%; left: 34%;}
 }
 
 @media(max-width: 1000px){
@@ -130,11 +130,11 @@ display: block;
         background: rgb(216, 216, 216);
         z-index: 3;
         top: -40%;
-        left: 33%;
+        left: -333%;
         border-radius: 15px;
     }
     .overlay.show{display: block;}
-    .popcontact.show{top: 40%;}
+    .popcontact.show{top: 40%; left: 33%;}
 }
 
 @media(max-width: 912px){
@@ -154,12 +154,12 @@ display: block;
         background: rgb(216, 216, 216);
         z-index: 3;
         top: -40%;
-        left: 32.5%;
+        left: -332.5%;
         border-radius: 15px;
     }
 
     .overlay.show{display: block;}
-    .popcontact.show{top: 40%;}
+    .popcontact.show{top: 40%; left: 32.5%;}
 }
 
 @media(max-width: 820px){
@@ -179,12 +179,12 @@ display: block;
         background: rgb(216, 216, 216);
         z-index: 3;
         top: -40%;
-        left: 30.5%;
+        left: -330.5%;
         border-radius: 15px;
     }
 
     .overlay.show{display: block;}
-    .popcontact.show{top: 40%;}
+    .popcontact.show{top: 40%; left: 30.5%;}
 }
 
 @media(max-width: 768px){
@@ -204,11 +204,11 @@ display: block;
         background: rgb(216, 216, 216);
         z-index: 3;
         top: -40%;
-        left: 29%;
+        left: -229%;
         border-radius: 15px;
     }
     .overlay.show{display: block;}
-    .popcontact.show{top: 40%;}
+    .popcontact.show{top: 40%; left: 29%;}
 }
 
 @media(max-width: 550px){
@@ -228,11 +228,11 @@ display: block;
         background: rgb(216, 216, 216);
         z-index: 3;
         top: -40%;
-        left: 19%;
+        left: -119%;
         border-radius: 15px;
     }
     .overlay.show{display: block;}
-    .popcontact.show{top: 40%;}
+    .popcontact.show{top: 40%; left: 19%;}
 }
 
 @media(max-width: 420px){
@@ -252,11 +252,11 @@ display: block;
         background: rgb(216, 216, 216);
         z-index: 3;
         top: -40%;
-        left: 11.5%;
+        left: -111.5%;
         border-radius: 15px;
     }
     .overlay.show{display: block;}
-    .popcontact.show{top: 40%;}
+    .popcontact.show{top: 40%; left: 11.5%;}
 }
 
 @media(max-width: 393px){
@@ -276,11 +276,11 @@ display: block;
         background: rgb(216, 216, 216);
         z-index: 3;
         top: -40%;
-        left: 10%;
+        left: -110%;
         border-radius: 15px;
     }
     .overlay.show{display: block;}
-    .popcontact.show{top: 40%;}
+    .popcontact.show{top: 40%; left: 10%;}
 }
 
 @media(max-width: 360px){
@@ -300,11 +300,11 @@ display: block;
         background: rgb(216, 216, 216);
         z-index: 3;
         top: -40%;
-        left: 6%;
+        left: -666%;
         border-radius: 15px;
     }
     .overlay.show{display: block;}
-    .popcontact.show{top: 40%;}
+    .popcontact.show{top: 40%; left: 6%;}
 }
 
 @media(max-width: 280px){
@@ -323,11 +323,11 @@ display: block;
         background: rgb(216, 216, 216);
         z-index: 3;
         top: -40%;
-        left: 8%;
+        left: -888%;
         border-radius: 15px;
     }
     .overlay.show{display: block;}
-    .popcontact.show{top: 40%;}
+    .popcontact.show{top: 40%; left: 8%;}
 
     .contactus h4{
 
